<resources>
    <string name="app_name">AllCount</string>
    <string name="pause">Pause</string>
    <string name="counter_name">Counter name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas pharetra porttitor. Nulla vulputate urna tempus dui malesuada, sit amet euismod ligula porta. Maecenas sed commodo arcu. Vestibulum consequat neque nibh, vel mollis urna posuere eget. Fusce malesuada ante quis dui rhoncus egestas. Maecenas ut magna diam. Proin luctus mi est, eget fermentum dui blandit et.  Donec lacus odio, aliquet vel vehicula ac, pharetra non eros. Etiam sed urna arcu. Quisque at orci in turpis imperdiet convallis. Nunc sit amet varius orci, vel iaculis dui. Pellentesque placerat mattis sem vitae mollis. Ut vitae lectus nunc. Duis luctus quam condimentum sapien ultricies ornare. In euismod tincidunt mauris sit amet sagittis. Phasellus ullamcorper id mauris non volutpat. Phasellus pellentesque id ligula sed interdum. Maecenas metus nisl, convallis eu metus ut, luctus volutpat felis. Ut risus dui, tempor eu augue vel, varius elementum nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque massa magna, tincidunt eu pharetra vitae, feugiat elementum tortor. Nulla placerat, sem quis maximus imperdiet, eros ipsum malesuada odio, blandit accumsan lorem velit sed lectus. Morbi convallis accumsan lacinia.  Nam rhoncus odio turpis, at porta ipsum aliquet a. Ut venenatis purus ac ante ultrices gravida. Nulla et elementum ex. Nam ac accumsan nunc. Morbi sagittis orci eget lectus dapibus, at fermentum massa lobortis. Etiam tincidunt tortor id nisi pulvinar, sed tincidunt enim porttitor. Integer dictum blandit erat et sollicitudin. Proin sollicitudin hendrerit tincidunt. Sed facilisis tempor erat. Nunc dapibus malesuada vehicula. Fusce elit libero, feugiat quis diam sit amet, pretium faucibus ante.  Pellentesque luctus, orci sit amet varius eleifend, magna velit consectetur mi, vel accumsan ex erat eu quam. Duis congue tempus pretium. Morbi eu congue mi. Maecenas eu rutrum orci. In hac habitasse platea dictumst. Morbi semper tincidunt velit, ut ultricies massa luctus ac. Donec imperdiet imperdiet sem, sit amet tempor justo semper vitae. Morbi sagittis egestas scelerisque. In volutpat sem sed malesuada ullamcorper. Mauris vel condimentum est. Nam blandit facilisis suscipit. Sed vel consequat ante. Nullam malesuada pretium maximus. Maecenas hendrerit porta ultrices.  Curabitur finibus rutrum imperdiet. Curabitur iaculis rutrum nisl nec euismod. Curabitur viverra libero sed tortor consectetur, id posuere lectus porta. Curabitur sodales pellentesque lacus sit amet luctus. In consequat vel erat eget tempor. Cras sed ultricies mauris. Nam vehicula dictum nisl, vitae suscipit metus lobortis bibendum. Nam aliquet, ipsum nec mollis vulputate, lectus magna gravida ligula, vel maximus ligula nisi a dolor. Morbi euismod blandit dolor, quis placerat enim pharetra ut. Maecenas accumsan tortor nec tellus dictum, gravida dignissim orci facilisis. Phasellus imperdiet, ipsum non fermentum vehicula, turpis tellus maximus est, a maximus magna nisl nec dui. Nam ex arcu, egestas eu tortor sed, hendrerit commodo tortor. Nam leo magna, elementum sed sodales nec, sodales id libero. Aenean ipsum tellus, mollis eget gravida ac, laoreet at elit.</string>
    <string name="delay">Delay</string>
    <string name="duration">Duration</string>
    <string name="start_calibrating">Hold still</string>
    <string name="start_calibrating_long">Start recording by holding your phone still in the starting position</string>
    <string name="do_repetition">Do one repetition and move the phone back to the starting position</string>
    <string name="hold_still_at_start">Keep your phone still in the starting position</string>
    <string name="delete_counter_warning">Are you sure? Counters without a name won\'t be saved!</string>
    <string name="help_1">Move your phone in the starting position. (e.g. put it in your pocket and get in push up position)</string>
    <string name="help_2">Keep the phone still for a couple of seconds till it tells you to start recording. (Ensure that the volume is on)</string>
    <string name="help_3">Start moving. Do one repetition of your exercise. If the exercise should be done for both sides (e.g. left and right leg for lunges), do both of them in the same recording.</string>
    <string name="help_4">Finish the exercise by moving the phone back to its starting position and hold it still again for a couple of seconds till it tells you that it starts counting. Ensure that it is rotated correctly e.g. not up side down.</string>
    <string name="help_5">After finishing the recording, AllCount will automatically start counting further repetitions.</string>
    <string name="help_6">If you wan\'t to save an exercise simply give it a name and it will automatically show up in the list of your counters.</string>
    <string name="help_7">If you wan\'t to remove a counter simply remove its name.</string>
    <string name="record_counter">Record Counter</string>
    <string name="action_help">Help</string>

    <string-array name="exercise">
        <item>Squats</item>
        <item>PushUps</item>
        <item>Lunges</item>
        <item>Situps</item>
        <item>Other</item>
    </string-array>
</resources>
